# BUILDING-MY-OWN-VECTOR-DB

./: .coverage  .env.example  .env.template  .gitignore  CHANGELOG.md  ROADMAP.md  alembic.ini  celery_app.py  cli.py  docker-compose.yaml  dockerfile  dockerfile.fix  pyproject.toml  readme.md  requirements.txt  test_hnsw_index.json  test_index.json  test_new_endpoints.py
agentic_memory/: cli.py  embedder.py  llm_client.py  pipeline.py  store.py  store_hnsw.py
alembic/: env.py
api/: main.py
config/: database.py  settings.py
database/: hnsw_database.py  schema.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
models/: pydantic_models.py
plugins/: registry.json
sdk/: client.py  pyproject.toml
services/: audit_service.py  auth_service.py  backup_service.py  billing_service.py  cache_service.py  embedding_service.py  flight_server.py  gnn_service.py  index_tuner.py  ltr_service.py  mcp_server.py  memory_service.py  multi_vector_service.py  multilevel_cache.py  pitr_service.py  query_cache.py  rag_service.py  search_engine_service.py  slow_query_analyzer.py  sparse_service.py  streaming_search.py  tenant_service.py  tiered_storage.py  vector_service.py
tasks/: maintenance_tasks.py
test/: test_adaptive_index.py  test_agentic_memory.py  test_auth_middleware.py  test_benchmark_service.py  test_cloud_platform.py  test_compaction.py  test_compliance_service.py  test_hnsw.py  test_materialized_views.py  test_memories.py  test_metadata_enrichment.py  test_mmap_store.py  test_multi_tenancy.py  test_query_cache.py  test_query_planner.py  (+4 more)
(+76 files in other folders)
