[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vector-db"
version = "1.0.0"
description = "A production-ready vector database built from scratch, with a built-in agent-memory layer and MCP server"
requires-python = ">=3.11"

[project.scripts]
# Agent-memory CLI, backed by the vector DB API.
agentic-memory = "agentic_memory.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501", "F401"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D100", "D101", "D102", "D103"]
"api/main.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["test"]
